--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .idea/*
-img/*
-res/*
+images/*
+resources/*
+saved_models/*
+
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
